# pydeb-s3

./: .coverage.elara.pid3776953.Xwv9VaYx.HDYpRwaf74Kh  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/pydeb_s3/: __init__.py  __main__.py  cli.py  lock.py  manifest.py  package.py  progress.py  release.py  s3_adapter.py  s3_utils.py
tests/: conftest.py  test_bandwidth_bits.py  test_bits_transfer_speed_column.py  test_clean_behavior.py  test_clean_codename_filtering.py  test_clean_component_filtering.py  test_clean_real_scenario.py  test_cli.py  test_cli_bytes_flag.py  test_copy_behavior.py  test_delete_behavior.py  test_exists_behavior.py  test_list_behavior.py  test_list_codenames_prefix.py  test_lock.py  test_manifest.py  test_no_global_state.py  test_package.py  test_release.py  test_release_behavior.py  test_s3_adapter.py  test_s3_store_progress.py  test_s3_utils.py  test_show_behavior.py  test_signing_adapter.py  test_upload_behavior.py  test_upload_progress.py  test_verify_behavior.py
tests/fixtures/: generate_test_debs.py  hello_2.10-5_amd64.deb  test-pkg-full_1.0.0_all.deb  test-pkg_1.0.0_all.deb  test-pkg_1.0.0_amd64.deb  test-pkg_1.0.0_arm64.deb
tests/integration/: conftest.py  test_apt_behaviour.py
